# ualr_chatbot

./: .gitignore  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
backend/: Dockerfile  feedback_log.jsonl  main.py
backend/ualr_chatbot/: llm.py  retriever.py
data/: departments_cleaned.xlsx  qas.xlsx
frontend/: Dockerfile.Frontend  app.py  requirements.txt
ualr_chatbot/: app.py  llm.py  retriever.py
